--- a/unit_4/index.html
+++ b/unit_4/index.html
@@ -21,8 +21,8 @@
 	</nav>
 	<section id="bio">
 		
-		<p>After of many years of informally dabbling in HTML, I have decided to go the down a structured route.</p>
-		<p>By trade I am a graphic artist who has been working mainly in print. But in the past 2 years I have been working on more and more digital projects and I want to take them further.
+		<p>After many years of informally dabbling in HTML, I have decided to follow a structured education.</p>
+		<p>By trade, I am a graphic artist who has been working primarly in print. Nevertheless in the past 2 years I have developed strength in digital projects and I want to further grow those skillsets.
 
 </section>
 
@@ -37,7 +37,7 @@
 <section id="skillset">
 	<div class="padd">
 		<h2>Eames Brochure</h2>
-		<p>Here is a print piece insipired by Ray and Charles Eames. I lead this project from reasearch, design and production.		</p>
+		<p>Here is a print piece insipired by Ray and Charles Eames. I lead this project from reasearch, design and production.</p>
 
 
 
