--- a/unit_4/index.html
+++ b/unit_4/index.html
@@ -20,6 +20,7 @@
 		</ul>
 	</nav>
 	<section id="bio">
+		<h2>Why am I here?</h2>
 		
 		<p>After many years of informally dabbling in HTML, I have decided to follow a structured education.</p>
 		<p>By trade, I am a graphic artist who has been working primarly in print. Nevertheless in the past 2 years I have developed strength in digital projects and I want to further grow those skillsets.
@@ -29,8 +30,8 @@
 <section id="description">
 	
 	<div class="padd">
-		<img src="./images/eames_brochure.png" width="600px" height="auto">
-		</div>
+		<img src="./images/eames_brochure_600px.png" alt="Brochure mockup.">
+	</div>
 
 </section>
 
@@ -38,8 +39,6 @@
 	<div class="padd">
 		<h2>Eames Brochure</h2>
 		<p>Here is a print piece insipired by Ray and Charles Eames. I lead this project from reasearch, design and production.</p>
-
-
 
 		<h2>Applications Used</h2>
 			<ul>
