--- a/unit_4/index.html
+++ b/unit_4/index.html
@@ -28,11 +28,7 @@
 </section>
 
 <section id="description">
-	
-	<div class="padd">
-		<img src="./images/eames_brochure_600px.png" alt="Brochure mockup.">
-	</div>
-
+	<div class="padd"><img src="./images/eames_brochure_600px.png" alt="Brochure mockup."></div>
 </section>
 
 <section id="skillset">
