--- a/unit_5/index.html
+++ b/unit_5/index.html
@@ -1,81 +1,71 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<title>Hector Mercado &#8212; Creative </title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <title>Hector Mercado &#8212; Creative </title>
 </head>
+
 <body>
-	<div id="container">
-		<header>
-			<h1>Hector Mercado Creative <span class="slogan">pixels are temporary, print is forever</span> </h1>
-		</header>
-
-		<nav>
-			<ul>
-				<li><a href="#">Home</a> </li>
-				<li><a href="#">Projects</a> </li>
-				<li><a href="#">Contact</a></li>
-			</ul>
-		</nav>
-
-		<section id="bio" class="clearfix">
-
-			<article>
-				<h2>Who am I ?</h2>
-
-				<p>After many years of informally dabbling in HTML, I have decided to follow a structured education.</p>
-				<p>By trade, I am a graphic artist who has been working primarly in print. Nevertheless in the past 2 years I have developed strength in digital projects and I want to further grow those skillsets.</p>
-
-			</article>
-
-			<aside>
-				<h2>My tools of choice</h2>
-				<ul>
-					<li>Adobe Creative Cloud</li>
-					<ul><li>Photoshop</li>
-						<li>InDesign</li>
-						<li>Illustrator</li>
-						<li>Acrobat</li>
-					</ul>
-					<li>Microsoft Office</li>
-					<li>Apple iWorks</li>
-				</ul>
-
-			</aside>
-
-		</section> 
-
-		<div class="portfolio clearfix">
-
-		<article id="description">
-<!-- 			<div class="padd">
- -->				<img src="./images/eames_brochure_600px.png" alt="Brochure mockup.">
- <!-- </div> -->
-		</article>
-
-			<aside id="skillset">
-				<div class="padd">
-					<h2>Eames Brochure</h2>
-					<p>Here is a print piece insipired by Ray and Charles Eames. I lead this project from reasearch, design and production.</p>
-
-					<h2>Applications Used</h2>
-					<ul>
-						<li>Photoshop </li>
-						<li>InDesign</li>
-						<li>Illustrator</li>
-						<!--<li>iBooks Author</li>-->
-					</ul>
-				</div>	
-			</aside>
-		</div>
-
-<footer>
-	<a href="#">Home</a> | 
-	<a href="#">Projects</a> | 
-	<a href="#">Contact</a> <br>
-	Hector Mercado &copy; 2018
-
-</footer>
-</div>
+    <div id="container">
+        <header>
+            <h1>Hector Mercado Creative <span class="slogan">pixels are temporary, print is forever</span> </h1>
+        </header>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a> </li>
+                <li><a href="#">Projects</a> </li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+        <section id="bio" class="clearfix">
+            <article>
+                <h2>Who am I ?</h2>
+                <p>After many years of informally dabbling in HTML, I have decided to follow a structured education.</p>
+                <p>By trade, I am a graphic artist who has been working primarly in print. Nevertheless in the past 2 years I have developed strength in digital projects and I want to further grow those skillsets.</p>
+            </article>
+            <aside>
+                <h2>My tools of choice</h2>
+                <ul>
+                    <li>Adobe Creative Cloud</li>
+                    <ul>
+                        <li>Photoshop</li>
+                        <li>InDesign</li>
+                        <li>Illustrator</li>
+                        <li>Acrobat</li>
+                    </ul>
+                    <li>Microsoft Office</li>
+                    <li>Apple iWorks</li>
+                </ul>
+            </aside>
+        </section>
+        <div class="portfolio clearfix">
+            <article id="description">
+                <!-- <div class="padd">-->
+                <img src="./images/eames_brochure_600px.png" alt="Brochure mockup.">
+                <!-- </div> -->
+            </article>
+            <aside id="skillset">
+                <div class="padd">
+                    <h2>Eames Brochure</h2>
+                    <p>Here is a print piece insipired by Ray and Charles Eames. I lead this project from reasearch, design and production.</p>
+                    <h2>Applications Used</h2>
+                    <ul>
+                        <li>Photoshop </li>
+                        <li>InDesign</li>
+                        <li>Illustrator</li>
+                        <!--<li>iBooks Author</li>-->
+                    </ul>
+                </div>
+            </aside>
+        </div>
+        <footer>
+            <a href="#">Home</a> |
+            <a href="#">Projects</a> |
+            <a href="#">Contact</a> <br>
+            Hector Mercado &copy; 2018
+        </footer>
+    </div>
 </body>
+
 </html>
