--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -5,13 +5,14 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>Hector Mercado &#8212;
         Creative </title>
-</head>
+<!--     <meta name="viewport" content="width=device-width, initial-scale=1">
+ --></head>
 
 <body>
     <div id="container">
         <header>
             <h1>Hector Mercado Creative<br>
-				<span id="slogan">pixels are temporary, print is forever</span> </h1>
+                <span id="slogan">pixels are temporary, print is forever</span> </h1>
         </header>
         <nav>
             <ul>
@@ -22,30 +23,15 @@
             </ul>
         </nav>
         <div class="portfolio">
-            <article class="description">
-                <img src="./images/eames_brochure_600px.png" alt="Brochure mockup.">
-				</article>
-                <aside class="skillset">
-                    <div class="padd">
-                        <h2>Eames Brochure</h2>
-                        <p>Here is a print piece insipired by Ray and Charles Eames. I lead this project from reasearch, design and production.</p>
-                        <h2>Applications Used</h2>
-                        <ul>
-                            <li>Photoshop </li>
-                            <li>InDesign</li>
-                            <li>Illustrator</li>
-                            <li>iBooks Author</li>
-                        </ul>
-                    </div>
-                </aside>
-                <hr>
+            <section>
                 <article class="description">
                     <img src="./images/eames_brochure_600px.png" alt="Brochure mockup.">
-				</article>
+                </article>
                     <aside class="skillset">
-                        <div class="padd">
-                            <h2>Eames Brochure</h2>
+                        <div class="blurb" <h2>Eames Brochure</h2>
                             <p>Here is a print piece insipired by Ray and Charles Eames. I lead this project from reasearch, design and production.</p>
+                        </div>
+                        <div class="tools">
                             <h2>Applications Used</h2>
                             <ul>
                                 <li>Photoshop </li>
@@ -55,23 +41,62 @@
                             </ul>
                         </div>
                     </aside>
-                    <hr>
-                    <article class="description">
-                        <img src="./images/eames_brochure_600px.png" alt="Brochure mockup.">
-				</article>
-                        <aside class="skillset">
-                            <div class="padd">
-                                <h2>Eames Brochure</h2>
-                                <p>Here is a print piece insipired by Ray and Charles Eames. I lead this project from reasearch, design and production.</p>
-                                <h2>Applications Used</h2>
-                                <ul>
-                                    <li>Photoshop </li>
-                                    <li>InDesign</li>
-                                    <li>Illustrator</li>
-                                    <li>iBooks Author</li>
-                                </ul>
-                            </div>
-                        </aside>
+            </section>
+            <hr class="clearfix hidden">
+            <section>
+                <article class="description">
+                    <img src="./images/eames_brochure_600px.png" alt="Brochure mockup.">
+                </article>
+                    <aside class="skillset">
+                        <div class="blurb" <h2>Eames Brochure</h2>
+                            <p>Here is a print piece insipired by Ray and Charles Eames. I lead this project from reasearch, design and production.</p>
+                        </div>
+                        <div class="tools">
+                            <h2>Applications Used</h2>
+                            <ul>
+                                <li>Photoshop </li>
+                                <li>InDesign</li>
+                                <li>Illustrator</li>
+                                <li>iBooks Author</li>
+                            </ul>
+                        </div>
+                    </aside>
+            </section>
+            <hr class="clearfix hidden">
+            <section>
+                <article class="description">
+                    <img src="./images/eames_brochure_600px.png" alt="Brochure mockup.">
+                                  </article>
+                    <aside class="skillset">
+                        <h2>Eames Brochure</h2>
+                        <p>Here is a print piece insipired by Ray and Charles Eames. I lead this project from reasearch, design and production.</p>
+                        <h2>Applications Used</h2>
+                        <ul>
+                            <li>Photoshop </li>
+                            <li>InDesign</li>
+                            <li>Illustrator</li>
+                            <li>iBooks Author</li>
+                        </ul>
+                    </aside>
+            </section>
+                        <hr class="clearfix hidden">
+
+            <section>
+                <article class="description">
+                    <img src="./images/eames_brochure_600px.png" alt="Brochure mockup.">
+                                  </article>
+                    <aside class="skillset">
+                        <h2>Eames Brochure</h2>
+                        <p>Here is a print piece insipired by Ray and Charles Eames. I lead this project from reasearch, design and production.</p>
+                        <h2>Applications Used</h2>
+                        <ul>
+                            <li>Photoshop </li>
+                            <li>InDesign</li>
+                            <li>Illustrator</li>
+                            <li>iBooks Author</li>
+                        </ul>
+                    </aside>
+            </section>
         </div>
         <section id="bio" class="clearfix">
             <h2>Why am I here?</h2>
@@ -146,7 +171,7 @@
         </div>
         <!--  <hr>
          <div id="education">
-        	<h3>Education</h3>
+            <h3>Education</h3>
                 <div>
                     <p>Bachelor of Arts, Art — Design Option.</p>
                     <p><strong>California State University, Los Angeles </strong></p>
@@ -187,7 +212,7 @@
                         </ul>
                 </div>
 
-	    </div> -->
+        </div> -->
         <footer>
             <a href="#">Home</a> |
             <a href="#">Projects</a> |
