--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -5,8 +5,8 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>Hector Mercado &#8212;
         Creative </title>
-<!--     <meta name="viewport" content="width=device-width, initial-scale=1">
- --></head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
 
 <body>
     <div id="container">
