--- a/unit_final/index.html
+++ b/unit_final/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>Hector Mercado &#8212;
         Creative </title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
+   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+ </head>
 
 <body>
     <div id="container">
