--- a/unit_final/index.html
+++ b/unit_final/index.html
@@ -23,11 +23,11 @@
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
-        <div class="portfolio">
-            <section>
+        <div class="portfolio clearfix">
+            <section >
                 <article class="description">
                     <img src="./images/nabi-konnect.jpg" alt="Brochure mockup.">
-                  </article>
+                </article>
                     <div class="skillset">
                         <div class="blurb">
                             <h2>Nabi Konnect</h2>
@@ -42,14 +42,34 @@
                         </div>
                     </div>
             </section>
+               <hr class="clearfix hidden">
+            <section>
+                <article class="description">
+                    <img src="./images/nabi-treasure-box.jpg" alt="Brochure mockup.">
+                  </article>
+                    <div class="skillset">
+                        <div class="blurb">
+                            <h2>Nabi Treasure Box</h2>
+                            <p>Here is a print piece insipired by Ray and Charles Eames. I lead this project from reasearch, design and production.</p>
+                        </div>
+                        <div class="tools">
+                            <h2>Applications Used</h2>
+                            <ul>
+                                <li>Photoshop </li>
+                                <li>Illustrator</li>
+                            </ul>
+                        </div>
+                    </div>
+            </section>
             <hr class="clearfix hidden">
+
             <section>
                 <article class="description">
                     <img src="./images/bigtab.jpg" alt="Brochure mockup.">
                   </article>
                     <div class="skillset">
                         <div class="blurb">
-                            <h2>Eames Brochure</h2>
+                            <h2>Nabi Big Tab UI</h2>
                             <p>Here is a print piece insipired by Ray and Charles Eames. I lead this project from reasearch, design and production.</p>
                         </div>
                         <div class="tools">
