--- a/unit_final/index.html
+++ b/unit_final/index.html
@@ -7,6 +7,7 @@
         Creative </title>
    <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <script src="js/jquery-3.3.1.js" type="text/javascript" charset="utf-8" async defer></script>
  </head>
 
 <body>
@@ -19,15 +20,15 @@
             <ul>
                 <li><a href="#">Home</a> </li>
                 <li><a href="#">Projects</a> </li>
-                <li><a href="#">Resume</a> </li>
+                <li><a href="#resume">Resume</a> </li>
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
         <div class="portfolio clearfix">
-            <section >
-                <article class="description">
-                    <img src="./images/nabi-konnect.jpg" alt="Brochure mockup.">
-                </article>
+            <section>
+                <article class="description fullheight" id="nab1">
+<!--                     <img src="./images/nabi-konnect.jpg" alt="Brochure mockup" >
+ -->                </article>
                     <div class="skillset">
                         <div class="blurb">
                             <h2>Nabi Konnect</h2>
@@ -43,10 +44,10 @@
                     </div>
             </section>
                <hr class="clearfix hidden">
-            <section>
-                <article class="description">
-                    <img src="./images/nabi-treasure-box.jpg" alt="Brochure mockup.">
-                  </article>
+            <section >
+                <article class="description fullheight" id="nab2">
+<!--                     <img src="./images/nabi-treasure-box.jpg" alt="Brochure mockup.">
+ -->                  </article>
                     <div class="skillset">
                         <div class="blurb">
                             <h2>Nabi Treasure Box</h2>
@@ -63,8 +64,8 @@
             </section>
             <hr class="clearfix hidden">
 
-            <section>
-                <article class="description">
+            <section >
+                <article class="description fullheight">
                     <img src="./images/bigtab.jpg" alt="Brochure mockup.">
                   </article>
                     <div class="skillset">
@@ -84,13 +85,13 @@
                     </div>
             </section>
             <hr class="clearfix hidden">
-            <section>
-                <article class="description">
-                    <img src="./images/ibooks_store.png" alt="Brochure mockup.">
-                  </article>
+           <section >
+                <article class="description fullheight" id="store">
+<!--                     <img src="./images/ibooks_store.png" alt="Brochure mockup.">
+ -->                </article> 
                     <div class="skillset">
                         <div class="blurb">
-                            <h2>Eames Brochure</h2>
+                            <h2>iBooks Storefront</h2>
                             <p>Here is a print piece insipired by Ray and Charles Eames. I lead this project from reasearch, design and production.</p>
                         </div>
                         <div class="tools">
@@ -103,10 +104,11 @@
                             </ul>
                         </div>
                     </div>
+                     
             </section>
             <hr class="clearfix hidden">
-            <section>
-                <article class="description">
+             <section >
+                <article class="description fullheight">
                     <img src="./images/eames_brochure_600px.png" alt="Brochure mockup.">
                   </article>
                     <div class="skillset">
@@ -131,6 +133,7 @@
             <p>After many years of informally dabbling in HTML, I have decided to follow a structured education.</p>
             <p>By trade, I am a graphic artist who has been working primarly in print. Nevertheless in the past 2 years I have developed strength in digital projects and I want to further grow those skillsets.</p>
         </section>
+       <a name="resume">
         <div id="resume" class="clearfix">
             <header>
                 <h3>Work Experience</h3>
@@ -248,5 +251,5 @@
         </footer>
     </div>
 </body>
-
+<script src="./js/script.js" type="text/javascript" charset="utf-8" async defer></script>
 </html>
