--- a/unit_final/index.html
+++ b/unit_final/index.html
@@ -7,7 +7,7 @@
         Creative </title>
    <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <script src="js/jquery-3.3.1.js" type="text/javascript" charset="utf-8" async defer></script>
+  <script src="js/jquery-3.3.1.js" type="text/javascript"></script>
  </head>
 
 <body>
