--- a/unit_final/index.html
+++ b/unit_final/index.html
@@ -5,10 +5,10 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>Hector Mercado &#8212;
         Creative </title>
-   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <script src="js/jquery-3.3.1.js" type="text/javascript"></script>
- </head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <script src="js/jquery-3.3.1.js" type="text/javascript"></script>
+</head>
 
 <body>
     <div id="container">
@@ -25,10 +25,8 @@
             </ul>
         </nav>
         <div class="portfolio clearfix">
-            <section>
-                <article class="description fullheight" id="nab1">
-<!--                     <img src="./images/nabi-konnect.jpg" alt="Brochure mockup" >
- -->                </article>
+            <article class="description fullheight" id="nab1">
+                <section>
                     <div class="skillset">
                         <div class="blurb">
                             <h2>Nabi Konnect</h2>
@@ -42,12 +40,10 @@
                             </ul>
                         </div>
                     </div>
-            </section>
-               <hr class="clearfix hidden">
-            <section >
-                <article class="description fullheight" id="nab2">
-<!--                     <img src="./images/nabi-treasure-box.jpg" alt="Brochure mockup.">
- -->                  </article>
+                </section>
+            </article>
+            <article class="description fullheight" id="nab2">
+                <section>
                     <div class="skillset">
                         <div class="blurb">
                             <h2>Nabi Treasure Box</h2>
@@ -61,13 +57,10 @@
                             </ul>
                         </div>
                     </div>
-            </section>
-            <hr class="clearfix hidden">
-
-            <section >
-                <article class="description fullheight">
-                    <img src="./images/bigtab.jpg" alt="Brochure mockup.">
-                  </article>
+                </section>
+            </article>
+            <article class="description fullheight" id="nabtab">
+                <section>
                     <div class="skillset">
                         <div class="blurb">
                             <h2>Nabi Big Tab UI</h2>
@@ -83,12 +76,10 @@
                             </ul>
                         </div>
                     </div>
-            </section>
-            <hr class="clearfix hidden">
-           <section >
-                <article class="description fullheight" id="store">
-<!--                     <img src="./images/ibooks_store.png" alt="Brochure mockup.">
- -->                </article> 
+                </section>
+            </article>
+            <article class="description fullheight" id="store">
+                <section>
                     <div class="skillset">
                         <div class="blurb">
                             <h2>iBooks Storefront</h2>
@@ -104,13 +95,10 @@
                             </ul>
                         </div>
                     </div>
-                     
-            </section>
-            <hr class="clearfix hidden">
-             <section >
-                <article class="description fullheight">
-                    <img src="./images/eames_brochure_600px.png" alt="Brochure mockup.">
-                  </article>
+                </section>
+            </article>
+            <article class="description fullheight" id="eames">
+                <section>
                     <div class="skillset">
                         <div class="blurb">
                             <h2>Eames Brochure</h2>
@@ -126,14 +114,15 @@
                             </ul>
                         </div>
                     </div>
-            </section>
+                </section>
+            </article>
         </div>
         <section id="bio" class="clearfix">
             <h2>Why am I here?</h2>
             <p>After many years of informally dabbling in HTML, I have decided to follow a structured education.</p>
             <p>By trade, I am a graphic artist who has been working primarly in print. Nevertheless in the past 2 years I have developed strength in digital projects and I want to further grow those skillsets.</p>
         </section>
-       <a name="resume">
+        <a name="resume">
         <div id="resume" class="clearfix">
             <header>
                 <h3>Work Experience</h3>
@@ -200,56 +189,15 @@
                 </article>
             </section>
         </div>
-        <hr>
-        <div id="education">
-            <h3>Education</h3>
-            <div>
-                <p>Bachelor of Arts, Art — Design Option.</p>
-                <p><strong>California State University, Los Angeles </strong></p>
-                <p>Date of Completion 06/10</p>
-                <p>Los Angeles, CA</p>
-            </div>
-            <div>
-                <p>Associate of Arts Degree</p>
-                <p><strong>Pasadena City College</strong></p>
-                <p>Date of Completion 12/06</p>
-                <p>Pasadena, CA</p>
-            </div>
-            <h3>Software</h3>
-            <div>
-                <ul>
-                    <li>Mac OS X, iOS and PC Platforms <br>
-                    </li>
-                    <li>Apple iWorks<br>
-                    </li>
-                    <li>iBooks Author<br>
-                    </li>
-                    <li>FileMaker<br>
-                    </li>
-                    <li>iAd Producer</li>
-                </ul>
-            </div>
-            <div>
-                <ul>
-                    <li>HTML/CSS<br>
-                    </li>
-                    <li>Adobe CS6 and older<br>
-                    </li>
-                    <li>Drupal 6.0<br>
-                    </li>
-                    <li>HTML/CSS (Hand Code)<br>
-                    </li>
-                    <li>Microsoft Office</li>
-                </ul>
-            </div>
-        </div>
+       
         <footer>
             <a href="#">Home</a> |
-            <a href="#">Projects</a> |
-            <a href="#">Contact</a> <br>
-            Hector Mercado &copy; 2018
+        <a href="#">Projects</a> |
+        <a href="#">Contact</a> <br>
+        Hector Mercado &copy; 2018
         </footer>
     </div>
 </body>
 <script src="./js/script.js" type="text/javascript" charset="utf-8" async defer></script>
+
 </html>
