--- a/unit_10/index.html
+++ b/unit_10/index.html
@@ -428,7 +428,7 @@
                                                                             </tr>
                                                                             <tr>
                                                                                 <td class="mobile-center" align="left" style="padding-top:25px;padding-bottom:0px;padding-left:10px;padding-right:10px;"><a href="#" target="_blank" title="Shop now">
-														<img src="images/1214_INT_DTV_ATT073934_M12_T3_NewConnects_EM_shopnowbluen.png" style="width:100%;max-width:160px;display: inline-block;" width="160" alt="Shop now" border="0" /></a>
+														<img src="./images/1214_INT_DTV_ATT073934_M12_T3_NewConnects_EM_shopnowbluen.png" style="width:100%;max-width:160px;display: inline-block;" width="160" alt="Shop now" border="0" /></a>
                                                                                 </td>
                                                                             </tr>
                                                                         </tbody>
