--- a/unit_10/index.html
+++ b/unit_10/index.html
@@ -269,7 +269,7 @@
                                     <tbody>
                                         <tr>
                                             <td width="30%" bgcolor="#ffffff" valign="top" align="left" style="padding-left:30px;padding-top:13px;padding-bottom:13px;">
-                                                <a href="http://%%track%%/clk60" target="_blank" title="AT&amp;T">
+                                                <a href="#" target="_blank" title="AT&amp;T">
 		<img src="./images/1214_DTV_IPBB_ATT073934_M12_T3_NewConnects_EM_logo.png" alt="AT&amp;T" width="40" border="0" style="-ms-interpolation-mode: bicubic; display: block;text-align:left;width:40px;" /></a>
                                             </td>
                                             <td align="right" bgcolor="#ffffff" width="70%" style="font-size:10px;line-height:16px;color:#8f8f8f;font-family:Arial, Helvetica, sans-serif;font-weight:400;padding-top:0px;padding-bottom:0px;padding-left:10px;padding-right:30px;vertical-align:center;"><a href="#" target="_blank" title="AT&amp;T" style="color: #8f8f8f;text-decoration: none;"><font style="color: #8f8f8f;text-decoration: none;">Get <span style="white-space: nowrap;">AT&amp;T&nbsp;Fiber</span> for super-fast&nbsp;internet!</font></a>
