--- a/unit_10/index.html
+++ b/unit_10/index.html
@@ -270,7 +270,7 @@
                                         <tr>
                                             <td width="30%" bgcolor="#ffffff" valign="top" align="left" style="padding-left:30px;padding-top:13px;padding-bottom:13px;">
                                                 <a href="#" target="_blank" title="AT&amp;T">
-		<img src="./images/1214_DTV_IPBB_ATT073934_M12_T3_NewConnects_EM_logo.png" alt="AT&amp;T" width="40" border="0" style="-ms-interpolation-mode: bicubic; display: block;text-align:left;width:40px;" /></a>
+		<img src="http://hvmercado.github.io/unit_10/images/1214_DTV_IPBB_ATT073934_M12_T3_NewConnects_EM_logo.png" alt="AT&amp;T" width="40" border="0" style="-ms-interpolation-mode: bicubic; display: block;text-align:left;width:40px;" /></a>
                                             </td>
                                             <td align="right" bgcolor="#ffffff" width="70%" style="font-size:10px;line-height:16px;color:#8f8f8f;font-family:Arial, Helvetica, sans-serif;font-weight:400;padding-top:0px;padding-bottom:0px;padding-left:10px;padding-right:30px;vertical-align:center;"><a href="#" target="_blank" title="AT&amp;T" style="color: #8f8f8f;text-decoration: none;"><font style="color: #8f8f8f;text-decoration: none;">Get <span style="white-space: nowrap;">AT&amp;T&nbsp;Fiber</span> for super-fast&nbsp;internet!</font></a>
                                             </td>
@@ -352,7 +352,7 @@
                                                                             </tr>
                                                                             <tr>
                                                                                 <td class="mobile-center" align="left" style="padding-top:25px;padding-bottom:0px;padding-left:10px;padding-right:10px;"><a href="#" target="_blank" title="Shop now">
-														<img src="./images/1214_INT_DTV_ATT073934_M12_T3_NewConnects_EM_shopnowbluen.png" style="width:100%;max-width:160px;display: inline-block;" width="160" alt="Shop now" border="0" /></a>
+														<img src="http://hvmercado.github.io/unit_10/images/1214_INT_DTV_ATT073934_M12_T3_NewConnects_EM_shopnowbluen.png" style="width:100%;max-width:160px;display: inline-block;" width="160" alt="Shop now" border="0" /></a>
                                                                                 </td>
                                                                             </tr>
                                                                         </tbody>
@@ -428,7 +428,7 @@
                                                                             </tr>
                                                                             <tr>
                                                                                 <td class="mobile-center" align="left" style="padding-top:25px;padding-bottom:0px;padding-left:10px;padding-right:10px;"><a href="#" target="_blank" title="Shop now">
-														<img src="./images/1214_INT_DTV_ATT073934_M12_T3_NewConnects_EM_shopnowbluen.png" style="width:100%;max-width:160px;display: inline-block;" width="160" alt="Shop now" border="0" /></a>
+														<img src="http://hvmercado.github.io/unit_10/images/1214_INT_DTV_ATT073934_M12_T3_NewConnects_EM_shopnowbluen.png" style="width:100%;max-width:160px;display: inline-block;" width="160" alt="Shop now" border="0" /></a>
                                                                                 </td>
                                                                             </tr>
                                                                         </tbody>
@@ -505,7 +505,7 @@
                                                                             </tr>
                                                                             <tr>
                                                                                 <td class="mobile-center" align="left" style="padding-top:25px;padding-bottom:0px;padding-left:0px;padding-right:0px;"><a href="#" target="_blank" title="Shop now">
-														<img src="./images/1214_INT_DTV_ATT073934_M12_T3_NewConnects_EM_shopnowbluen.png" style="width:100%;max-width:160px;display: inline-block;" width="160" alt="Shop now" border="0" /></a>
+														<img src="http://hvmercado.github.io/unit_10/images/1214_INT_DTV_ATT073934_M12_T3_NewConnects_EM_shopnowbluen.png" style="width:100%;max-width:160px;display: inline-block;" width="160" alt="Shop now" border="0" /></a>
                                                                                 </td>
                                                                             </tr>
                                                                         </tbody>
@@ -558,7 +558,7 @@
                                         </tr>
                                         <tr>
                                             <td bgcolor="#009fdb" class="mobile-padding-top18" align="left" style="padding-top:11px;padding-bottom:0px;padding-left:30px;padding-right:30px;"><a href="#" target="_blank" title="Shop now">
-		<img src="./images/1214_INT_DTV_ATT073934_M12_T3_NewConnects_EM_shopnowwhite.png" style="width:100%;max-width:215px;display: inline-block;" width="215" alt="Shop now" border="0" /></a>
+		<img src="http://hvmercado.github.io/unit_10/images/1214_INT_DTV_ATT073934_M12_T3_NewConnects_EM_shopnowwhite.png" style="width:100%;max-width:215px;display: inline-block;" width="215" alt="Shop now" border="0" /></a>
                                                 <!--[if gte mso 12]><br />&nbsp;<![endif]-->
                                             </td>
                                         </tr>
