--- a/unit_10/index.html
+++ b/unit_10/index.html
@@ -298,7 +298,7 @@
                                     <tbody>
                                         <tr>
                                             <td bgcolor="#ffffff" valign="top" style="padding-top:0px;padding-left:0px;padding-right:0px;vertical-align:top;background-color: #ffffff;border-collapse: collapse;">
-                                                <img alt="curve" border="0" src="./Images/1214_DTV_IPBB_ATT073934_M12_T3_NewConnects_EM_curve.png" style="display:block;vertical-align:top;width:100%;max-width:600px;margin:0;border:0;border-collapse: collapse;" width="600" /></td>
+                                                <img alt="curve" border="0" src="img src="http://hvmercado.github.io/unit_10/Images/1214_DTV_IPBB_ATT073934_M12_T3_NewConnects_EM_curve.png" style="display:block;vertical-align:top;width:100%;max-width:600px;margin:0;border:0;border-collapse: collapse;" width="600" /></td>
                                         </tr>
                                     </tbody>
                                 </table>
@@ -325,7 +325,7 @@
                                                                         <tbody>
                                                                             <tr>
                                                                                 <td class="mobile-padding-rt0" style="padding-top:0px;padding-bottom:40px;padding-left:10px;padding-right:10px;vertical-align:top;"><a href="#" target="_blank" title="Bundle savings!">
-														<img alt="Bundle savings!" border="0" src="images/1214_DTV_IPBB_ATT073934_M12_T3_NewConnects_EM_img1.jpg" style="display:inline-block;vertical-align:middle;width:100%;max-width:268px;margin:0;border:0;" width="268" /></a></td>
+														<img alt="Bundle savings!" border="0" src="img src="http://hvmercado.github.io/unit_10/Images/1214_DTV_IPBB_ATT073934_M12_T3_NewConnects_EM_img1.jpg" style="display:inline-block;vertical-align:middle;width:100%;max-width:268px;margin:0;border:0;" width="268" /></a></td>
                                                                             </tr>
                                                                         </tbody>
                                                                     </table>
