--- a/unit_10/index.html
+++ b/unit_10/index.html
@@ -298,7 +298,7 @@
                                     <tbody>
                                         <tr>
                                             <td bgcolor="#ffffff" valign="top" style="padding-top:0px;padding-left:0px;padding-right:0px;vertical-align:top;background-color: #ffffff;border-collapse: collapse;">
-                                                <img alt="curve" border="0" src="img src="http://hvmercado.github.io/unit_10/Images/1214_DTV_IPBB_ATT073934_M12_T3_NewConnects_EM_curve.png" style="display:block;vertical-align:top;width:100%;max-width:600px;margin:0;border:0;border-collapse: collapse;" width="600" /></td>
+                                                <img alt="curve" border="0" src="http://hvmercado.github.io/unit_10/Images/1214_DTV_IPBB_ATT073934_M12_T3_NewConnects_EM_curve.png" style="display:block;vertical-align:top;width:100%;max-width:600px;margin:0;border:0;border-collapse: collapse;" width="600" /></td>
                                         </tr>
                                     </tbody>
                                 </table>
@@ -325,7 +325,7 @@
                                                                         <tbody>
                                                                             <tr>
                                                                                 <td class="mobile-padding-rt0" style="padding-top:0px;padding-bottom:40px;padding-left:10px;padding-right:10px;vertical-align:top;"><a href="#" target="_blank" title="Bundle savings!">
-														<img alt="Bundle savings!" border="0" src="img src="http://hvmercado.github.io/unit_10/Images/1214_DTV_IPBB_ATT073934_M12_T3_NewConnects_EM_img1.jpg" style="display:inline-block;vertical-align:middle;width:100%;max-width:268px;margin:0;border:0;" width="268" /></a></td>
+														<img alt="Bundle savings!" border="0" src="http://hvmercado.github.io/unit_10/Images/1214_DTV_IPBB_ATT073934_M12_T3_NewConnects_EM_img1.jpg" style="display:inline-block;vertical-align:middle;width:100%;max-width:268px;margin:0;border:0;" width="268" /></a></td>
                                                                             </tr>
                                                                         </tbody>
                                                                     </table>
@@ -352,7 +352,7 @@
                                                                             </tr>
                                                                             <tr>
                                                                                 <td class="mobile-center" align="left" style="padding-top:25px;padding-bottom:0px;padding-left:10px;padding-right:10px;"><a href="#" target="_blank" title="Shop now">
-														<img src="http://hvmercado.github.io/unit_10/images/1214_INT_DTV_ATT073934_M12_T3_NewConnects_EM_shopnowbluen.png" style="width:100%;max-width:160px;display: inline-block;" width="160" alt="Shop now" border="0" /></a>
+														<img src="http://hvmercado.github.io/unit_10/Images/1214_INT_DTV_ATT073934_M12_T3_NewConnects_EM_shopnowbluen.png" style="width:100%;max-width:160px;display: inline-block;" width="160" alt="Shop now" border="0" /></a>
                                                                                 </td>
                                                                             </tr>
                                                                         </tbody>
@@ -406,7 +406,7 @@
                                                                         <tbody>
                                                                             <tr>
                                                                                 <td bgcolor="#ffffff" style="padding-top:20px;padding-left:10px;padding-right:10px;padding-bottom: 20px; vertical-align:top;"><a href="#" target="_blank" title="Our strongest Wi-Fi signal">
-														<img alt="Our strongest Wi-Fi signal" border="0" src="images/1214_DTV_IPBB_ATT073934_M12_T3_NewConnects_EM_img2.jpg" style="display:inline-block;vertical-align:middle;width:100%;max-width:248px;margin:0;border:0;" width="248" /></a></td>
+														<img alt="Our strongest Wi-Fi signal" border="0" src="http://hvmercado.github.io/unit_10/Images/1214_DTV_IPBB_ATT073934_M12_T3_NewConnects_EM_img2.jpg" style="display:inline-block;vertical-align:middle;width:100%;max-width:248px;margin:0;border:0;" width="248" /></a></td>
                                                                             </tr>
                                                                         </tbody>
                                                                     </table>
@@ -428,7 +428,7 @@
                                                                             </tr>
                                                                             <tr>
                                                                                 <td class="mobile-center" align="left" style="padding-top:25px;padding-bottom:0px;padding-left:10px;padding-right:10px;"><a href="#" target="_blank" title="Shop now">
-														<img src="http://hvmercado.github.io/unit_10/images/1214_INT_DTV_ATT073934_M12_T3_NewConnects_EM_shopnowbluen.png" style="width:100%;max-width:160px;display: inline-block;" width="160" alt="Shop now" border="0" /></a>
+														<img src="http://hvmercado.github.io/unit_10/Images/1214_INT_DTV_ATT073934_M12_T3_NewConnects_EM_shopnowbluen.png" style="width:100%;max-width:160px;display: inline-block;" width="160" alt="Shop now" border="0" /></a>
                                                                                 </td>
                                                                             </tr>
                                                                         </tbody>
@@ -478,7 +478,7 @@
                                                                         <tbody>
                                                                             <tr>
                                                                                 <td class="mobile-padding-rt0" style="padding-top:30px;padding-bottom:20px;padding-left:0px;padding-right:20px;vertical-align:top;"><a href="#" target="_blank" title="99% reliability">
-														<img alt="99% reliability" border="0" src="images/1214_DTV_IPBB_ATT073934_M12_T3_NewConnects_EM_ipad.jpg" style="display:inline-block;vertical-align:middle;width:100%;max-width:255px;margin:0;border:0;" width="255" /></a></td>
+														<img alt="99% reliability" border="0" src="http://hvmercado.github.io/unit_10/Images/1214_DTV_IPBB_ATT073934_M12_T3_NewConnects_EM_ipad.jpg" style="display:inline-block;vertical-align:middle;width:100%;max-width:255px;margin:0;border:0;" width="255" /></a></td>
                                                                             </tr>
                                                                         </tbody>
                                                                     </table>
@@ -505,7 +505,7 @@
                                                                             </tr>
                                                                             <tr>
                                                                                 <td class="mobile-center" align="left" style="padding-top:25px;padding-bottom:0px;padding-left:0px;padding-right:0px;"><a href="#" target="_blank" title="Shop now">
-														<img src="http://hvmercado.github.io/unit_10/images/1214_INT_DTV_ATT073934_M12_T3_NewConnects_EM_shopnowbluen.png" style="width:100%;max-width:160px;display: inline-block;" width="160" alt="Shop now" border="0" /></a>
+														<img src="http://hvmercado.github.io/unit_10/Images/1214_INT_DTV_ATT073934_M12_T3_NewConnects_EM_shopnowbluen.png" style="width:100%;max-width:160px;display: inline-block;" width="160" alt="Shop now" border="0" /></a>
                                                                                 </td>
                                                                             </tr>
                                                                         </tbody>
