--- a/unit_10/index.html
+++ b/unit_10/index.html
@@ -531,7 +531,7 @@
                                     <tbody>
                                         <tr>
                                             <td bgcolor="#ffffff" valign="bottom" style="padding-top:0px;padding-left:0px;padding-right:0px;vertical-align:bottom;background-color: #ffffff;border-collapse: collapse;">
-                                                <img alt="curve" border="0" src="images/1214_DTV_IPBB_ATT073934_M12_T3_NewConnects_EM_curve_bottom.png" style="display:block;vertical-align:bottom;width:100%;max-width:600px;margin:0;border:0;border-collapse: collapse;" width="600" /></td>
+                                                <img alt="curve" border="0" src="http://hvmercado.github.io/unit_10/Images/1214_DTV_IPBB_ATT073934_M12_T3_NewConnects_EM_curve_bottom.png" style="display:block;vertical-align:bottom;width:100%;max-width:600px;margin:0;border:0;border-collapse: collapse;" width="600" /></td>
                                         </tr>
                                         <tr>
                                             <td align="left" class="mobile-text25" bgcolor="#009fdb" style="font-size:35px;line-height:38px;color:#ffffff;font-family:Aleck-Sans, Arial, Helvetica, sans-serif;font-weight:400;padding-top:15px;padding-bottom:0px;padding-left:30px;padding-right:30px;vertical-align:center;">
@@ -558,7 +558,7 @@
                                         </tr>
                                         <tr>
                                             <td bgcolor="#009fdb" class="mobile-padding-top18" align="left" style="padding-top:11px;padding-bottom:0px;padding-left:30px;padding-right:30px;"><a href="#" target="_blank" title="Shop now">
-		<img src="http://hvmercado.github.io/unit_10/images/1214_INT_DTV_ATT073934_M12_T3_NewConnects_EM_shopnowwhite.png" style="width:100%;max-width:215px;display: inline-block;" width="215" alt="Shop now" border="0" /></a>
+		<img src="http://hvmercado.github.io/unit_10/Images/1214_INT_DTV_ATT073934_M12_T3_NewConnects_EM_shopnowwhite.png" style="width:100%;max-width:215px;display: inline-block;" width="215" alt="Shop now" border="0" /></a>
                                                 <!--[if gte mso 12]><br />&nbsp;<![endif]-->
                                             </td>
                                         </tr>
