--- a/unit_10/index.html
+++ b/unit_10/index.html
@@ -609,7 +609,7 @@
                             <table cellpadding="0" cellspacing="0" border="0" class="hidespacer">
                                 <tr>
                                     <td height="1" class="hidespacer" style="min-width:600px; font-size:0px;line-height:0px;" width="600">
-                                        <img height="1" src="images/1214_DTV_IPBB_ATT073934_M12_T3_NewConnects_EM_spacer.png" style="min-width: 600px; text-decoration: none; border: none; -ms-interpolation-mode: bicubic;" class="hide_for_mobile_440" />
+                                        <img height="1" src="http://hvmercado.github.io/unit_10/Images/1214_DTV_IPBB_ATT073934_M12_T3_NewConnects_EM_spacer.png" style="min-width: 600px; text-decoration: none; border: none; -ms-interpolation-mode: bicubic;" class="hide_for_mobile_440" />
 			</td>
                                 </tr>
                             </table>
