--- a/unit_10/index.html
+++ b/unit_10/index.html
@@ -535,7 +535,7 @@
                                         </tr>
                                         <tr>
                                             <td align="left" class="mobile-text25" bgcolor="#009fdb" style="font-size:35px;line-height:38px;color:#ffffff;font-family:Aleck-Sans, Arial, Helvetica, sans-serif;font-weight:400;padding-top:15px;padding-bottom:0px;padding-left:30px;padding-right:30px;vertical-align:center;">
-                                                SIGN UP FOR INTERNET POWERED BY <span style="white-space: nowrap">AT&amp;T&nbsp;FIBER</span> WITH <span style="font-family:Aleck-Sans-bold, Arial, Helvetica, sans-serif;font-weight: bold;">100 MBPS<sup style="font-size: 15px;font-weight:700;">&dagger;&dagger;</sup> FOR $40/</span><sup style="font-size: 23px;font-weight:700;">MO.<sup style="font-size: 9px;">1</sup></sup><span style="font-size: 9px;">Plus taxes.</span>
+                                                SIGN UP FOR INTERNET POWERED BY <span style="white-space: nowrap">AT&amp;T&nbsp;FIBER</span> WITH <span style="font-family:Aleck-Sans-bold, Arial, Helvetica, sans-serif;font-weight: bold;">100 MBPS<sup style="font-size: 15px;font-weight:700;">&dagger;&dagger;</sup> FOR $40</span><sup style="font-size: 23px;font-weight:700;">/MO.<sup style="font-size: 9px;">1</sup></sup><span style="font-size: 9px;">Plus taxes.</span>
                                             </td>
                                         </tr>
                                         <tr>
